# keter-media-db

./: Cargo.toml
src/: auth.rs  client.rs  db.rs  lib.rs  queries.rs  sql.rs
src/auth/: author.rs  mod.rs  moderator.rs  registered.rs  unauthenticated.rs  user.rs
src/db/: author.rs  mod.rs  moderator.rs  unauthenticated.rs  user.rs
src/db/auth/: mod.rs
src/db/auth/sql/: get_user_key_password.sql  has_admin_permission.sql  has_author_permission.sql  has_moderator_permission.sql  register_user.sql
src/db/model/: admin.rs  author.rs  mod.rs  moderator.rs  registered.rs  unauthenticated.rs  user.rs
src/db/model/sql/author/: create_media.sql  delete_material.sql  insert_material_license_id.sql
src/db/model/sql/registered/: create_material_usage.sql  get_info.sql  get_usages.sql  is_material_used.sql  post_review_with_id.sql  update_material_rating.sql  use_material.sql
src/db/model/sql/unauthenticated/: get_author_id.sql  get_author_info_filtered.sql  get_author_info_many.sql  get_license_with_id.sql  get_license_with_title.sql  get_licenses_many.sql  get_material_download_name.sql  get_material_usage_user_id.sql  get_material_usages.sql  get_material_with_id.sql  get_materials.sql  get_materials_media.sql  get_media_filtered.sql  get_media_id.sql  get_media_many.sql  get_media_specific.sql  get_media_usages.sql  get_media_with_author_id.sql  get_review_id.sql  get_reviews_media_id.sql  get_user_info.sql  get_user_priveleges.sql  get_user_usages.sql
src/db/model/sql/user/: get_info.sql  get_privelegies.sql
src/model/: authors.rs  mod.rs
